[gd_scene load_steps=25 format=3 uid="uid://dkyb56nio8ufu"]

[ext_resource type="Script" path="res://Frog.gd" id="1_bv06j"]
[ext_resource type="Texture2D" uid="uid://lu7eke0obxsa" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-idle.png" id="1_d1oih"]
[ext_resource type="Texture2D" uid="uid://cptq2dexgqj6l" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/enemy-deadth.png" id="1_urjhr"]
[ext_resource type="Texture2D" uid="uid://bfbtcsqodubi8" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-jump.png" id="2_df303"]
[ext_resource type="AudioStream" uid="uid://dvvwxo2qmhlgx" path="res://audio/hurt.mp3" id="5_njvj1"]
[ext_resource type="AudioStream" uid="uid://b115iednetndg" path="res://audio/coins.mp3" id="6_lgpog"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_madbt"]
size = Vector2(22, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_wksaf"]
atlas = ExtResource("1_urjhr")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah0la"]
atlas = ExtResource("1_urjhr")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmbpw"]
atlas = ExtResource("1_urjhr")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nmwn"]
atlas = ExtResource("1_urjhr")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh0st"]
atlas = ExtResource("1_urjhr")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn4oh"]
atlas = ExtResource("1_urjhr")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj3bf"]
atlas = ExtResource("1_d1oih")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f01mt"]
atlas = ExtResource("1_d1oih")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6do24"]
atlas = ExtResource("1_d1oih")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2ggs"]
atlas = ExtResource("1_d1oih")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdlv5"]
atlas = ExtResource("2_df303")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf57m"]
atlas = ExtResource("2_df303")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_au55q"]
atlas = ExtResource("2_df303")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_e6vqp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wksaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah0la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmbpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nmwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh0st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn4oh")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj3bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f01mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6do24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2ggs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj3bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj3bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj3bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj3bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj3bf")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdlv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf57m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au55q")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_b4knl"]
radius = 302.926

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0id1"]
size = Vector2(13, 18.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yt2hq"]
size = Vector2(25, 11.625)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_bv06j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -8)
shape = SubResource("RectangleShape2D_madbt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -11)
sprite_frames = SubResource("SpriteFrames_e6vqp")
animation = &"Idle"
metadata/_edit_lock_ = true

[node name="Player Detection area 2d" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detection area 2d"]
shape = SubResource("CircleShape2D_b4knl")

[node name="Player Death area 2d" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Death area 2d"]
position = Vector2(0, -9.75)
shape = SubResource("RectangleShape2D_f0id1")

[node name="PlayerCollsion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollsion"]
position = Vector2(1.5, -6.1875)
shape = SubResource("RectangleShape2D_yt2hq")

[node name="playerHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_njvj1")
volume_db = 8.0

[node name="coins" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lgpog")
volume_db = 2.0

[connection signal="body_entered" from="Player Detection area 2d" to="." method="_on_player_detection_area_2d_body_entered"]
[connection signal="body_exited" from="Player Detection area 2d" to="." method="_on_player_detection_area_2d_body_exited"]
[connection signal="body_entered" from="Player Death area 2d" to="." method="_on_player_death_area_2d_body_entered"]
[connection signal="body_entered" from="PlayerCollsion" to="." method="_on_player_collsion_body_entered"]
